--- a/popup.html
+++ b/popup.html
@@ -3,8 +3,12 @@
   <head>
     <title>Extract Twitter Username</title>
     <style type="text/css" media="all">
-      body { width: 200px; }
+      body { width: 200px; margin: 0; padding: 10px; }
+      h1 { margin-top: 0px; margin-bottom: 10px; }
+      ul { padding: 0; margin: 0; list-style-type: none; }
       li { padding: 2px 0px; }
+      .icon { vertical-align: text-top; margin-right: 5px; }
+      .icon img { width: 16px; height: 16px; }
       button { font-size: 10px; margin-left: 5px; background: navajowhite; cursor: pointer; border: 1px solid black; padding: 1px 4px; }
     </style>
     <script src="jquery-2.1.1.min.js"></script>
@@ -12,7 +16,6 @@
   </head>
   <body>
     <h1>Usernames</h1>
-    <ul id="usernames">
-    </ul>
+    <ul id="usernames"></ul>
   </body>
 </html>
